--- a/app/src/main/res/layout/fragment_random_dog.xml
+++ b/app/src/main/res/layout/fragment_random_dog.xml
@@ -1,13 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.ui.fragments.RandomDogFragment"
+    android:background="@color/white"
     android:paddingBottom="30dp"
-    android:background="@color/white">
+    tools:context=".view.ui.fragments.RandomDogFragment">
 
+    <com.agrawalsuneet.dotsloader.loaders.LazyLoader
+        android:id="@+id/dotLoader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_margin="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lazyloader_animDur="400"
+        app:lazyloader_dotsDist="10dp"
+        app:lazyloader_dotsRadius="10dp"
+        app:lazyloader_firstDelayDur="150"
+        app:lazyloader_firstDotColor="@color/main_orange"
+        app:lazyloader_interpolator="@android:anim/decelerate_interpolator"
+        app:lazyloader_secondDelayDur="300"
+        app:lazyloader_secondDotColor="@color/main_orange"
+        app:lazyloader_thirdDotColor="@color/main_orange" />
 
     <ImageView
         android:id="@+id/randomDogImage"
@@ -21,13 +40,13 @@
 
     <ImageButton
         android:id="@+id/randomButton"
-        android:layout_width="138dp"
-        android:layout_height="132dp"
+        android:layout_width="111dp"
+        android:layout_height="105dp"
         android:layout_marginBottom="68dp"
         android:background="@drawable/dog_paw"
         android:backgroundTint="@color/main_orange"
-        android:outlineAmbientShadowColor="@color/med_orange"
         android:elevation="10dp"
+        android:outlineAmbientShadowColor="@color/med_orange"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -37,33 +56,30 @@
         android:id="@+id/previousFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginLeft="40dp"
         android:layout_marginBottom="20dp"
         android:backgroundTint="@color/white"
-        app:srcCompat="@drawable/ic_previous"
-        app:borderWidth="5dp"
         android:outlineAmbientShadowColor="@color/main_orange"
         android:outlineSpotShadowColor="@color/main_orange"
+        app:borderWidth="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ic_previous"
         app:tint="@color/med_orange" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/searchFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:borderWidth="5dp"
-        app:tint="@color/med_orange"
         android:layout_marginRight="40dp"
         android:layout_marginBottom="20dp"
         android:backgroundTint="@color/white"
-        app:srcCompat="@drawable/ic_search"
         android:outlineAmbientShadowColor="@color/main_orange"
-        android:outlineSpotShadowColor="@color/main_orange"/>
-
-
-
+        android:outlineSpotShadowColor="@color/main_orange"
+        app:borderWidth="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_search"
+        app:tint="@color/med_orange" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
