--- a/app/src/main/res/layout/fragment_search_breed.xml
+++ b/app/src/main/res/layout/fragment_search_breed.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/searchLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.ui.fragments.SearchBreedFragment"
-    android:paddingTop="8dp"
-    android:id="@+id/searchLayout"
+    android:background="@color/white"
     android:orientation="vertical"
-    android:background="@color/white">
+    android:paddingTop="8dp"
+    tools:context=".view.ui.fragments.SearchBreedFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -34,6 +34,10 @@
             android:id="@+id/searchBreedBtn"
             android:layout_width="62dp"
             android:layout_height="54dp"
+            android:outlineAmbientShadowColor="@color/main_orange"
+            android:outlineSpotShadowColor="@color/main_orange"
+            app:backgroundTint="@color/white"
+            app:borderWidth="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.985"
@@ -41,11 +45,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/ic_search"
-            app:backgroundTint="@color/white"
-            android:outlineAmbientShadowColor="@color/main_orange"
-            android:outlineSpotShadowColor="@color/main_orange"
-            app:borderWidth="5dp"
-            app:tint="@color/med_orange"/>
+            app:tint="@color/med_orange" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -59,18 +59,18 @@
         app:lazyloader_dotsDist="10dp"
         app:lazyloader_dotsRadius="10dp"
         app:lazyloader_firstDelayDur="150"
-        app:lazyloader_firstDotColor="@color/med_orange"
+        app:lazyloader_firstDotColor="@color/main_orange"
         app:lazyloader_interpolator="@android:anim/decelerate_interpolator"
         app:lazyloader_secondDelayDur="300"
-        app:lazyloader_secondDotColor="@color/med_orange"
-        app:lazyloader_thirdDotColor="@color/med_orange" />
+        app:lazyloader_secondDotColor="@color/main_orange"
+        app:lazyloader_thirdDotColor="@color/main_orange" />
 
     <ImageView
         android:id="@+id/imageViewSearch"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:srcCompat="@tools:sample/backgrounds/scenic"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
 
 </RelativeLayout>
