changed action bar names

--- a/app/src/main/res/layout/fragment_search_breed.xml
+++ b/app/src/main/res/layout/fragment_search_breed.xml
@@ -11,44 +11,6 @@
     tools:context=".view.ui.fragments.SearchBreedFragment">
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/userSearch"
-            android:layout_width="245dp"
-            android:layout_height="34dp"
-            android:background="@drawable/et_background"
-            android:hint="Ex. Poodle"
-            android:textColor="@color/main_orange"
-            android:textColorHint="@color/grey"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/searchBreedBtn"
-            app:layout_constraintHorizontal_bias="0.271"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/searchBreedBtn"
-            android:layout_width="62dp"
-            android:layout_height="54dp"
-            android:outlineAmbientShadowColor="@color/main_orange"
-            android:outlineSpotShadowColor="@color/main_orange"
-            app:backgroundTint="@color/white"
-            app:borderWidth="5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.985"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/ic_search"
-            app:tint="@color/med_orange" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
     <com.agrawalsuneet.dotsloader.loaders.LazyLoader
         android:id="@+id/dotLoader"
         android:layout_width="wrap_content"
@@ -68,9 +30,34 @@
     <ImageView
         android:id="@+id/imageViewSearch"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="476dp"
         android:layout_centerInParent="true"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+    <EditText
+        android:id="@+id/userSearch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="60dp"
+        android:layout_marginLeft="8dp"
+        android:background="@drawable/et_background"
+        android:hint="Ex. Poodle"
+        android:textColor="@color/main_orange"
+        android:textColorHint="@color/grey" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/searchBreedBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@id/userSearch"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="55dp"
+        app:backgroundTint="@color/white"
+        app:srcCompat="@drawable/ic_search"
+        app:tint="@color/med_orange" />
 
 
 </RelativeLayout>
