designed fragment previous dog and set up navigation to it

--- a/app/src/main/res/layout/fragment_search_breed.xml
+++ b/app/src/main/res/layout/fragment_search_breed.xml
@@ -28,7 +28,7 @@
         app:lazyloader_thirdDotColor="@color/main_orange" />
 
     <ImageView
-        android:id="@+id/imageViewSearch"
+        android:id="@+id/searchBreedImage"
         android:layout_width="match_parent"
         android:layout_height="476dp"
         android:layout_centerInParent="true"
