--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,5 @@
     <color name="main_orange">#e6774e</color>
     <color name="light_orange">#f6e8e3</color>
     <color name="med_orange">#db8b6e</color>
-    <color name="grey">#393838</color>
+    <color name="grey">#AAAAAA</color>
 </resources>
