--- a/app/src/main/res/layout/fragment_previous_dog.xml
+++ b/app/src/main/res/layout/fragment_previous_dog.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
+    android:padding="8dp">
+
+    <ImageView
+        android:id="@+id/previousDogImage"
+        android:layout_width="410dp"
+        android:layout_height="500dp"
+        android:layout_marginTop="108dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
