--- a/app/src/main/res/layout/fragment_random_dog.xml
+++ b/app/src/main/res/layout/fragment_random_dog.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:paddingBottom="30dp"
-    tools:context=".view.ui.fragments.RandomDogFragment">
+    tools:context=".view.ui.fragments.RandomDogFragment"
+    android:padding="8dp">
 
     <com.agrawalsuneet.dotsloader.loaders.LazyLoader
         android:id="@+id/dotLoader"
