--- a/app/src/main/res/layout/fragment_previous_dog.xml
+++ b/app/src/main/res/layout/fragment_previous_dog.xml
@@ -7,7 +7,19 @@
     android:background="@color/white"
     android:padding="8dp">
 
-    <ImageView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/previousDogRv"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        tools:layout_editor_absoluteX="-1dp"
+        tools:layout_editor_absoluteY="3dp"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:listitem="@layout/previous_dog_item"/>
+
+    <!--<ImageView
         android:id="@+id/previousDogImage"
         android:layout_width="410dp"
         android:layout_height="500dp"
@@ -15,7 +27,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        tools:srcCompat="@tools:sample/backgrounds/scenic" />-->
 
 
 
