--- a/app/src/main/res/layout/fragment_previous_dog.xml
+++ b/app/src/main/res/layout/fragment_previous_dog.xml
@@ -9,15 +9,18 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/previousDogRv"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         tools:layout_editor_absoluteX="-1dp"
         tools:layout_editor_absoluteY="3dp"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:listitem="@layout/previous_dog_item"/>
+        tools:listitem="@layout/previous_dog_item"
+        android:scrollbars="vertical"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>
 
     <!--<ImageView
         android:id="@+id/previousDogImage"
