--- a/app/src/main/res/layout/fragment_previous_dog.xml
+++ b/app/src/main/res/layout/fragment_previous_dog.xml
@@ -7,6 +7,20 @@
     android:background="@color/white"
     android:padding="8dp">
 
+    <TextView
+        android:id="@+id/empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No Previous Dogs"
+        android:textColor="@color/grey"
+        android:textSize="30dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:visibility="gone"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/previousDogRv"
         android:layout_width="wrap_content"
@@ -20,7 +34,11 @@
         app:layout_constraintRight_toRightOf="parent"
         tools:listitem="@layout/previous_dog_item"
         android:scrollbars="vertical"
+        android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>
+
+
+
 
     <!--<ImageView
         android:id="@+id/previousDogImage"
